# meta-agent

./: .env  .gitignore  README.md  check_workforce.py  main_agent_run.py  main_discovery.py  main_factory.py  pyproject.toml  requirements.txt  test_db.py
.github/workflows/: ci.yml
agent_configs/: brain_GOOGLE-SEARCH-AGENT.json  brain_WP-0029b07b.json  brain_WP-56e4b36a.json  brain_WP-69830567.json  brain_WP-6ad262fa.json  brain_WP-7464f98e.json  brain_WP-adac8b8b.json  brain_WP-cb50116d.json
demo/: google_test_workflow.json  runner.py  test_meta_agent_live.py  visual_demo.py
outputs/: discovered_workflows.json
scripts/: analyze_candidates.py  test_db.py  test_discovery.py  test_pattern.py
src/core/: database.py  logger.py  schemas.py  utils.py
src/discovery/: exporter.py  models.py  processor.py  repetition.py  vision_labeler.py
src/factory/: agent_runner.py  meta_agent.py  runtime.py
tests/: test_schemas.py
